--- a/configure.ac
+++ b/configure.ac
@@ -6,8 +6,8 @@ define(_CLIENT_VERSION_REVISION, 6)
 define(_CLIENT_VERSION_BUILD, 2)
 define(_CLIENT_VERSION_IS_RELEASE, true)
 define(_COPYRIGHT_YEAR, 2017)
-define(_COPYRIGHT_HOLDERS,[The %s developers])
-define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[STRAKS Core]])
+define(_COPYRIGHT_HOLDERS,[%s developers])
+define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[STRAKS]])
 AC_INIT([STRAKS Core],[_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION],[https://github.com/straks/straks/issues],[straks],[https://straks.info/])
 AC_CONFIG_SRCDIR([src/validation.cpp])
 AC_CONFIG_HEADERS([src/config/straks-config.h])
