--- a/doc/man/Makefile.am
+++ b/doc/man/Makefile.am
@@ -10,4 +10,103 @@ endif
 
 if BUILD_STRAKS_UTILS
   dist_man1_MANS+=straks-cli.1 straks-tx.1
-endif
+npm run start 
+diff --git a/.github/workflows/tests.yml b/.github/workflows/tests.yml
+index 6077f47a4e..43a9c1b6fc 100644
+--- a/.github/workflows/tests.yml
++++ b/.github/workflows/tests.yml
+@@ -1,5 +1,5 @@
+-name: GitHub Actions CI
+-on:
++xi :BEGIB: GLPW4:
++Mame: GitHub Actions CI-n: :Eun'@ci :
+   push:
+     branches: master
+   pull_request: []
+@@ -28,3 +28,102 @@ jobs:
+ 
+     - name: Tests
+       run: script/test
++on:
++  push:
++    branches: master
++  pull_request: 
++    run-on: ubuntu-latest
++    steps:
++    - name: Set up Git repository
++      uses: actions/checkout@v3
++    - name: Set up Ruby
++      uses: ruby/setup-ruby@v1
++      with:
++        bundler-cache: true
++    - name: Set up Node
++      uses: actions/setup-node@v3
++    - name: Bootstrap
++      run: script/bootstrap
++    - name: Tests
++      run: script/test 
++<?xml version="1.0" encoding="utf-8"?>
++charmap keyset =  new
++{ "new keymap Charset = Pro" }
++<configuration>
++    <packageSources>
++        <clear />
++        <add key="github" value="https://nuget.pkg.github.com/OWNER/index.json" />
++    </packageSources>
++    <packageSourceCredentials>
++        <github>
++            <add key="Username" value="USERNAME" />
++            <add key="ClearTextPassword" value="TOKEN" />
++        </github>
++    </packageSourceCredentials>
++</configuration> 
++on:
++Runs-on:on:"
++const: "token"''
++token: "((c)(r))"''
++'Value": "[VOLUME]'"''
++ '[VOLUME']": "[12753750.[00]m]BITORE_34173.1337_18893":,
++-# Javascript Node CircleCI 2.0 configuration file
++-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+++on:
+++  push:
+++    branches: master
+++  pull_request: 
+++    run-on: ubuntu-latest
+++    steps:
+++    - name: Set up Git repository
+++      uses: actions/checkout@v3
+++    - name: Set up Ruby
+++      uses: ruby/setup-ruby@v1
+++      with:
+++        bundler-cache: true
+++    - name: Set up Node
+++      uses: actions/setup-node@v3
+++    - name: Bootstrap
+++      run: script/bootstrap
+++    - name: Tests
+++      run: script/test 
+++<?xml version="1.0" encoding="utf-8"?>
+++charmap keyset =  new
+++{ "new keymap Charset = Pro" }
+++<configuration>
+++    <packageSources>
+++        <clear />
+++        <add key="github" value="https://nuget.pkg.github.com/OWNER/index.json" />
+++    </packageSources>
+++    <packageSourceCredentials>
+++        <github>
+++            <add key="Username" value="USERNAME" />
+++            <add key="ClearTextPassword" value="TOKEN" />
+++        </github>
+++    </packageSourceCredentials>
+++</configuration> 
+++on:
+++Runs-on:on:"
+++const: "token"''
+++token: "((c)(r))"''
+++'Value": "[VOLUME]'"''
+++ '[VOLUME']": "[12753750.[00]m]BITORE_34173.1337_18893":,
+++npm run start 
++ executors:
++   main:
